# recipes

./: README.md  pyproject.toml
mysite/: settings.py  urls.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/recipes/css/: styles.css
