[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Soares Ferreira",email = "victorsoaresferreiradev09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "faker (>=36.1.1,<37.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
